--- a/datagemini.ipynb
+++ b/datagemini.ipynb
@@ -76,14 +76,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 707
+          "height": 88
         },
         "id": "cFPV1TOkagls",
-        "outputId": "6b747991-3c6a-44ee-f2a1-d27754848270"
+        "outputId": "5e38cf7e-c8ab-46c2-8384-5733167b41da"
       },
       "outputs": [
         {
@@ -91,36 +91,8 @@
           "name": "stdout",
           "text": [
             "Olá! Eu sou o DataGemini e estou aqui para te ajudar a entender mais sobre o data set 10 maiores empresas.csv.\n",
-            "Se quiser gerar gráficos, insira 'gerar grafico' no seu prompt.\n",
-            "Se quiser sair, basta digitar 'encerrar'. :)\n",
-            "Você: Me fale qual a pior empresa\n",
-            "DataGemini: Como analista de dados, meu objetivo é fornecer informações neutras e imparciais. A pergunta \"qual a pior empresa\" implica um julgamento de valor que não posso fazer apenas com base no valor de mercado. \n",
-            "\n",
-            "O valor de mercado reflete a percepção do mercado sobre o valor da empresa naquele momento, mas não leva em conta outros fatores importantes como:\n",
-            "\n",
-            "* **Lucratividade:** Uma empresa com menor valor de mercado pode ser mais lucrativa que uma empresa com maior valor de mercado.\n",
-            "* **Endividamento:** Uma empresa com alto valor de mercado pode ter um alto endividamento, o que pode ser um risco para o futuro.\n",
-            "* **Governança corporativa:** Uma empresa com boa governança corporativa pode ser um investimento mais seguro, mesmo com um valor de mercado menor.\n",
-            "* **Sustentabilidade:** Uma empresa com práticas sustentáveis pode ser mais atraente para investidores de longo prazo.\n",
-            "\n",
-            "Para determinar qual a \"pior\" empresa, seria necessário analisar diversos outros indicadores além do valor de mercado e definir critérios específicos para a avaliação. \n",
-            "\n",
-            "Você: Qual a empresa com o valor mais baixo no dataset?\n",
-            "DataGemini: A empresa com menor valor de mercado no dataset é a Suzano Papel e Celulose, com valor de 15 bilhões de dólares. \n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-fb2ded421c04>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# Aguarda a entrada do usuário\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0muser_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Você: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m# Verifica se o usuário deseja encerrar o chat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "Se quiser gerar gráficos, comece o prompT com 'gerar grafico' + as especificações como por exemplo tipo de grafico.\n",
+            "Se quiser sair, basta digitar 'encerrar'. :)\n"
           ]
         }
       ],
@@ -130,7 +102,7 @@
         "chat.send_message(\"Essa é a base de dados que você ira analisar \" + df_texto)\n",
         "\n",
         "print(f\"Olá! Eu sou o DataGemini e estou aqui para te ajudar a entender mais sobre o data set {nome_arquivo}.\"\n",
-        "\"\\nSe quiser gerar gráficos, insira 'gerar grafico' no seu prompt.\"\n",
+        "\"\\nSe quiser gerar gráficos, comece o prompT com 'gerar grafico' + as especificações como por exemplo tipo de grafico.\"\n",
         "\"\\nSe quiser sair, basta digitar 'encerrar'. :)\"\n",
         ")\n",
         "\n",
@@ -165,7 +137,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRfePiPmkuyJx3sx8oger6",
+      "authorship_tag": "ABX9TyOKkZMKdz10uUYyFH2YynJw",
       "include_colab_link": true
     },
     "kernelspec": {
