--- a/datagemini.ipynb
+++ b/datagemini.ipynb
@@ -45,19 +45,16 @@
         "genai.configure(api_key= api_key)\n",
         "\n",
         "#  Configurando o modelo generativo que será utilizado\n",
-        "instruction = (\"Você é um analista de dados e fornecerá informações detalhadas sobre datasets de forma clara e objetiva. \"\n",
-        "               \"Quando for pedido para gerar gráficos, não adicione nenhum comentário ao código. \"\n",
-        "               \"Não adicione ```` python no começo do código nem ´´´´´ no final. \"\n",
-        "               \"A prioridade é sempre utilizar a biblioteca plotly.graph_objs para gerar gráficos quando for possível. \"\n",
-        "               \"O comando 'gerar gráfico' deve ser utilizado para solicitar a geração de um gráfico. \"\n",
-        "               \"Além disso, é necessário fornecer um comando específico para o tipo de gráfico desejado. \"\n",
-        "              )\n",
+        "instruction = (\"Você é um analista de dados fornecera informações detalhadas sobre datasets de forma clara e objetiva\"\n",
+        "               \"quando for pedido para gerar graficos não adicionara nenhum comentario ao codigo, não adicionar ```` python no começo do codigo nem ´´´´´ no final, apenas fornecera o codigo pronto para ser executado\"\n",
+        "               \"A prioridade é sempre utilizar a biblioteca  plotly.graph_objs para gerar graficos quando for possível\"\n",
+        ")\n",
         "model = genai.GenerativeModel('models/gemini-1.5-pro-latest', system_instruction=instruction)"
       ],
       "metadata": {
         "id": "R6BvNLjiBFlm"
       },
-      "execution_count": 3,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -71,7 +68,7 @@
       "metadata": {
         "id": "C3_hTwXcTRA5"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -83,7 +80,7 @@
           "height": 88
         },
         "id": "cFPV1TOkagls",
-        "outputId": "5e38cf7e-c8ab-46c2-8384-5733167b41da"
+        "outputId": "15d0f2cd-f2d9-4f70-c0d8-8a4abe269dfb"
       },
       "outputs": [
         {
@@ -137,7 +134,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKkZMKdz10uUYyFH2YynJw",
+      "authorship_tag": "ABX9TyOkt8zwb4BcaVIotip3Gcck",
       "include_colab_link": true
     },
     "kernelspec": {
